# example-pokemon-team-service

./: .env.template  .envrc  .gitignore  AGENTS.md  Dockerfile  PLAN.md  README.md  deploy.env.template
.beads/: issues.jsonl
.github/workflows/: deploy.yml
frontend/: index.html
infra/: DEPLOYMENT.md  INFRA.md  backend.tf  github_secrets.tf  main.tf  outputs.tf  prod.tfvars.template  providers.tf  variables.tf  versions.tf
pokemon_service/: __init__.py  handler.py  local_server.py
python/: pyproject.toml
python/src/pokemon_service/: __init__.py  handler.py  local_server.py
python/tests/: test_handler.py
scripts/: bootstrap-tf-state.sh  check-ecr-image.sh  update-readme-live-url.sh
tests/: test_handler.py
